--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -1,1 +1,6 @@
+<h1>Bai 3: Bai tap - color picker</h1>
 <app-color-picker></app-color-picker>
+<br>
+<h1>Bai 4: TH - hacker news</h1>
+<app-article></app-article>
+<app-like></app-like>
