--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -2,5 +2,8 @@
 <app-color-picker></app-color-picker>
 <br>
 <h1>Bai 4: TH - hacker news</h1>
+<app-navbar></app-navbar>
 <app-article></app-article>
 <app-like></app-like>
+<app-footer></app-footer>
+
