--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -6,4 +6,7 @@
 <app-article></app-article>
 <app-like></app-like>
 <app-footer></app-footer>
+<br>
+<h1>Bai 5: TH - name card</h1>
+<app-name-card cardName="Professional Dev" email="prodev@codegym.vn" phone="0123456789"></app-name-card>
 
