--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -9,4 +9,7 @@
 <br>
 <h1>Bai 5: TH - name card</h1>
 <app-name-card cardName="Professional Dev" email="prodev@codegym.vn" phone="0123456789"></app-name-card>
+<br>
+<h1>Bai 5: TH - progress bar</h1>
+<app-progress-bar [progress]="0"></app-progress-bar>
 
