bt - countdown time

--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -12,4 +12,7 @@
 <br>
 <h1>Bai 5: TH - progress bar</h1>
 <app-progress-bar [progress]="0"></app-progress-bar>
+<br>
+<h1>Bai 5: BT - countdown</h1>
+<app-countdown-timer start="11"></app-countdown-timer>
 
