--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -15,4 +15,8 @@
 <br>
 <h1>Bai 5: BT - countdown</h1>
 <app-countdown-timer start="11"></app-countdown-timer>
+<br>
+<h1>Bai 6:Th - thoi gian song</h1>
+<a routerLink="/timelines">Ứng dụng tính thời gian sống</a>
+<router-outlet></router-outlet>
 
