--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -19,4 +19,8 @@
 <h1>Bai 6:Th - thoi gian song</h1>
 <a routerLink="/timelines">Ứng dụng tính thời gian sống</a>
 <router-outlet></router-outlet>
+<br>
+<h1>Bai 6: TH - playlist</h1>
+<a routerLink="/youtube">Youtube</a>
+<router-outlet></router-outlet>
 
