--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -23,4 +23,8 @@
 <h1>Bai 6: TH - playlist</h1>
 <a routerLink="/youtube">Youtube</a>
 <router-outlet></router-outlet>
+<br>
+<h1>Bai 6: TH - product list</h1>
+<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>
+<router-outlet></router-outlet>
 
