--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -16,15 +16,19 @@
 <h1>Bai 5: BT - countdown</h1>
 <app-countdown-timer start="11"></app-countdown-timer>
 <br>
-<h1>Bai 6:Th - thoi gian song</h1>
+<h1>Bai 7:Th - thoi gian song</h1>
 <a routerLink="/timelines">Ứng dụng tính thời gian sống</a>
 <router-outlet></router-outlet>
 <br>
-<h1>Bai 6: TH - playlist</h1>
+<h1>Bai 7: TH - playlist</h1>
 <a routerLink="/youtube">Youtube</a>
 <router-outlet></router-outlet>
 <br>
-<h1>Bai 6: TH - product list</h1>
+<h1>Bai 7: TH - product list</h1>
 <a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>
+<router-outlet></router-outlet>
+<br>
+<h1>Bai 7:BT - dictionary</h1>
+<a routerLink="/dictionary">Translate word</a>
 <router-outlet></router-outlet>
 
