--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -31,4 +31,6 @@
 <h1>Bai 7:BT - dictionary</h1>
 <a routerLink="/dictionary">Translate word</a>
 <router-outlet></router-outlet>
-
+<br>
+<h1>Bai 6: BT - form login</h1>
+<app-user-form></app-user-form>
