bt - update/delete product

--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -1,36 +1,40 @@
-<h1>Bai 3: Bai tap - color picker</h1>
-<app-color-picker></app-color-picker>
-<br>
-<h1>Bai 4: TH - hacker news</h1>
-<app-navbar></app-navbar>
-<app-article></app-article>
-<app-like></app-like>
-<app-footer></app-footer>
-<br>
-<h1>Bai 5: TH - name card</h1>
-<app-name-card cardName="Professional Dev" email="prodev@codegym.vn" phone="0123456789"></app-name-card>
-<br>
-<h1>Bai 5: TH - progress bar</h1>
-<app-progress-bar [progress]="0"></app-progress-bar>
-<br>
-<h1>Bai 5: BT - countdown</h1>
-<app-countdown-timer start="11"></app-countdown-timer>
-<br>
-<h1>Bai 7:Th - thoi gian song</h1>
-<a routerLink="/timelines">Ứng dụng tính thời gian sống</a>
+<!--<h1>Bai 3: Bai tap - color picker</h1>-->
+<!--<app-color-picker></app-color-picker>-->
+<!--<br>-->
+<!--<h1>Bai 4: TH - hacker news</h1>-->
+<!--<app-navbar></app-navbar>-->
+<!--<app-article></app-article>-->
+<!--<app-like></app-like>-->
+<!--<app-footer></app-footer>-->
+<!--<br>-->
+<!--<h1>Bai 5: TH - name card</h1>-->
+<!--<app-name-card cardName="Professional Dev" email="prodev@codegym.vn" phone="0123456789"></app-name-card>-->
+<!--<br>-->
+<!--<h1>Bai 5: TH - progress bar</h1>-->
+<!--<app-progress-bar [progress]="0"></app-progress-bar>-->
+<!--<br>-->
+<!--<h1>Bai 5: BT - countdown</h1>-->
+<!--<app-countdown-timer start="11"></app-countdown-timer>-->
+<!--<br>-->
+<!--<h1>Bai 7:Th - thoi gian song</h1>-->
+<!--<a routerLink="/timelines">Ứng dụng tính thời gian sống</a>-->
+<!--<router-outlet></router-outlet>-->
+<!--<br>-->
+<!--<h1>Bai 7: TH - playlist</h1>-->
+<!--<a routerLink="/youtube">Youtube</a>-->
+<!--<router-outlet></router-outlet>-->
+<!--<br>-->
+<!--<h1>Bai 7: TH - product list</h1>-->
+<!--<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>-->
+<!--<router-outlet></router-outlet>-->
+<!--<br>-->
+<!--<h1>Bai 7:BT - dictionary</h1>-->
+<!--<a routerLink="/dictionary">Translate word</a>-->
+<!--<router-outlet></router-outlet>-->
+<!--<br>-->
+<!--<h1>Bai 6: BT - form login</h1>-->
+<!--<app-user-form></app-user-form>-->
+<!--<br>-->
+<h1>Bai 7: BT - update product</h1>
+<app-product-list></app-product-list>
 <router-outlet></router-outlet>
-<br>
-<h1>Bai 7: TH - playlist</h1>
-<a routerLink="/youtube">Youtube</a>
-<router-outlet></router-outlet>
-<br>
-<h1>Bai 7: TH - product list</h1>
-<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/product/create">Tạo mới sản phẩm</a>
-<router-outlet></router-outlet>
-<br>
-<h1>Bai 7:BT - dictionary</h1>
-<a routerLink="/dictionary">Translate word</a>
-<router-outlet></router-outlet>
-<br>
-<h1>Bai 6: BT - form login</h1>
-<app-user-form></app-user-form>
