bai tap nang cap product

--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -35,6 +35,14 @@
 <!--<h1>Bai 6: BT - form login</h1>-->
 <!--<app-user-form></app-user-form>-->
 <!--<br>-->
-<h1>Bai 7: BT - update product</h1>
-<app-product-list></app-product-list>
+<!--<h1>Bai 7: BT - update product</h1>-->
+<!--<app-product-list></app-product-list>-->
+<!--<router-outlet></router-outlet>-->
+<!--<br>-->
+<!--<h1>Bai 8 - TH xay dung product</h1>-->
+<!--<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/category/list">Danh sách danh mục sản phẩm</a>-->
+<!--<router-outlet></router-outlet>-->
+<br>
+<h1>Bai 8 - BT nang cap product</h1>
+<app-nav-bar></app-nav-bar>
 <router-outlet></router-outlet>
