city crud 2 bang

--- a/BT/bai 3/angular-color-picker-app/src/app/app.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/app.component.html
@@ -42,7 +42,9 @@
 <!--<h1>Bai 8 - TH xay dung product</h1>-->
 <!--<a routerLink="/product/list">Danh sách sản phẩm</a>|<a routerLink="/category/list">Danh sách danh mục sản phẩm</a>-->
 <!--<router-outlet></router-outlet>-->
-<br>
-<h1>Bai 8 - BT nang cap product</h1>
-<app-nav-bar></app-nav-bar>
+<!--<br>-->
+<!--<h1>Bai 8 - BT nang cap product</h1>-->
+<!--<app-nav-bar></app-nav-bar>-->
+<!--<router-outlet></router-outlet>-->
+<app-city-list></app-city-list>
 <router-outlet></router-outlet>
