--- a/BT/bai 3/angular-color-picker-app/src/app/category/category-edit/category-edit.component.html
+++ b/BT/bai 3/angular-color-picker-app/src/app/category/category-edit/category-edit.component.html
@@ -1,10 +1,6 @@
 <h1>Cập nhật thông tin danh mục sản phẩm</h1>
-<form [formGroup]="categoryForm" (ngSubmit)="updateCategory(id)">
+<form *ngIf="categoryForm" [formGroup]="categoryForm" (ngSubmit)="updateCategory(id)">
   <table>
-    <tr>
-      <td>Mã danh mục:</td>
-      <td><input type="number" formControlName="id"></td>
-    </tr>
     <tr>
       <td>Tên danh mục:</td>
       <td><input type="text" formControlName="name"></td>
